# tkinter_with_db

./: backend.py  books.db  frontend.py  pyproject.toml  readme.md
