[tool.poetry]
name = "tk_inter_example"
version = "0.1.0"
description = ""
authors = ["pkams <patrick_ams@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
